ko/15.3/user/search-field.rst
=================
검색 필드 지정 검색
=================

필드 지정 검색
==============

|Fess| 에서 크롤링한 결과는 제목이나 본문 등 각 필드별로 저장됩니다. 이러한 필드를 지정하여 검색할 수 있습니다. 필드를 지정하여 검색하면 문서 유형별 또는 크기별 등 세밀한 검색 조건을 지정할 수 있습니다.

사용 가능한 필드
---------------

기본적으로 다음 필드를 지정하여 검색할 수 있습니다.

.. list-table::
   :header-rows: 1

   * - 필드명
     - 설명
   * - url
     - 크롤링한 URL
   * - host
     - 크롤링한 URL에 포함된 호스트명
   * - title
     - 제목
   * - content
     - 본문
   * - content_length
     - 크롤링한 문서 크기
   * - last_modified
     - 크롤링한 문서의 최종 수정 일시
   * - mimetype
     - 문서의 MIME 타입

표: 사용 가능한 필드 목록


필드를 지정하지 않은 경우 title 및 content를 대상으로 검색합니다.
필드를 추가하여 검색 대상으로 지정할 수도 있습니다.

HTML 파일을 검색 대상으로 하는 경우 title 태그가 title 필드에, body 태그 이하의 문자열이 content 필드에 등록됩니다.

사용 방법
------

필드 지정 검색을 하는 경우 "필드명:검색어"와 같이 필드명과 검색어를 콜론(:)으로 구분하여 검색 양식에 입력하여 검색합니다.

title 필드에 대해 fess를 검색어로 검색하는 경우 다음과 같이 입력합니다.

::

    title:fess

위 검색으로 title 필드에 fess가 포함된 문서가 검색 결과로 표시됩니다.

url 필드에 대해 검색하는 경우 다음과 같이 입력합니다.

::

   url:https\:\/\/fess.codelibs.org\/ja\/15.3\/*
   url:"https://fess.codelibs.org/ja/15.3/*"

전자는 와일드카드 쿼리를 사용할 수 있으므로 ``url:*\/\/fess.codelibs.org\/*`` 와 같은 작성도 가능합니다. url 내의 ":"와 "/"는 예약어이므로 이스케이프해야 합니다. 후자는 와일드카드 쿼리를 사용할 수 없지만 접두사 쿼리를 사용할 수 있습니다.
